--- a/home.html
+++ b/home.html
@@ -144,7 +144,7 @@
 	<div class="footer_bg">
 		<a href="https://www.facebook.com/akshit.bhatia.520?ref=br_rs"><div class="footer"><img src="images/fb.png" height="48px" width="48px"></div></a>
 		<a href="https://www.instagram.com/_.akshit._/"><div class="footer"><img src="images/insta.png" height="48px" width="48px"></div></a>
-		<a href="https://ak-bhatia.github.io/blog.html"><div class="footer"><img src="images/pin.png" height="48px" width="48px"></div></a>
+		<a href="https://ak-bhatia.github.io/home.html"><div class="footer"><img src="images/pin.png" height="48px" width="48px"></div></a>
 		<a href="https://twitter.com"><div class="footer"><img src="images/twitter.png" height="48px" width="48px"></div></a>
 		<a href="https://www.youtube.com/channel/UCNQs5UYk3Oku33enuiK7-Pw"><div class="footer"><img src="images/youtube.png" height="48px" width="48px"></div></a>
 	</div>
