--- a/blog.html
+++ b/blog.html
@@ -55,16 +55,16 @@ I made many webpages,templates and websites.Along with web designing,I used to t
 	</div>
 </div>
 <div class="unknown">
-	<a href="home.html"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp About</div></a>
-	<a href="home.html"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  Projects</div></a>
-	<a href="home.html"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Experiences</div></a>
+	<a href="home.html#About"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp About</div></a>
+	<a href="home.html#Education"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  Projects</div></a>
+	<a href="home.html#Experience"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Experiences</div></a>
 	<a href="#About"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Blog</div></a>
-	<a href="home.html"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp Contact</div></a>
+	<a href="home.html#Profile"><div class="menu2">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp Contact</div></a>
 </div>	
 	<div class="footer_bg">
 		<a href="https://www.facebook.com/akshit.bhatia.520?ref=br_rs"><div class="footer"><img src="images/fb.png" height="48px" width="48px"></div></a>
 		<a href="https://www.instagram.com/_.akshit._/"><div class="footer"><img src="images/insta.png" height="48px" width="48px"></div></a>
-		<a href="https://ak-bhatia.github.io/blog.html"><div class="footer"><img src="images/pin.png" height="48px" width="48px"></div></a>
+		<a href="https://ak-bhatia.github.io/home.html"><div class="footer"><img src="images/pin.png" height="48px" width="48px"></div></a>
 		<a href="https://twitter.com"><div class="footer"><img src="images/twitter.png" height="48px" width="48px"></div></a>
 		<a href="https://www.youtube.com/channel/UCNQs5UYk3Oku33enuiK7-Pw"><div class="footer"><img src="images/youtube.png" height="48px" width="48px"></div></a>
 	</div>
