--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
 <title>Hello</title>
 
-
+<script type="text/javascript">!function(t,e){"use strict";var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0],a=e.createElement("script");a.setAttribute("type","text/javascript"),a.setAttribute("src",t),r.appendChild(a)}catch(t){}};t.CollectId = "5a91801a17b14142228a5d25",r("https://s3.amazonaws.com/collectchat/launcher.js")}(window,document);</script>
 <link rel="stylesheet" href="style.css">
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<meta name="keywords" content="VisualLightBox, LightBox, Photo Gallery, lightbox photo gallery software, lightbox gallery generator" />
