--- a/home.html
+++ b/home.html
@@ -149,5 +149,7 @@
 		<a href="https://www.youtube.com/channel/UCNQs5UYk3Oku33enuiK7-Pw"><div class="footer"><img src="images/youtube.png" height="48px" width="48px"></div></a>
 	</div>
 </div>
+
+<iframe src="https://links.collect.chat/5a91801a17b14142228a5d25" width="100%" height="600" frameBorder="0" />
 </body>
 </html>
